--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Ray Bogman
 domain: raybogman.com
 description: Entrepeneur | Speaker | Trainer | Author | Consultant
-cover: assets/images/raybogman.jpg
+cover: assets/images/raybogman-1280.jpg
 logo: assets/images/logo.png
 favicon: assets/images/favicon.png
 baseurl: "/" # the subpath of your site, e.g. /blog/ or / for root
