--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Ray Bogman
 domain: raybogman.com
-description: Entrepeneur | Speaker | Trainer | Author | Consultant
+description: Entrepeneur | Speaker | Trainer | Author | Host | Consultant
 cover: assets/images/raybogman-1280.jpg
 logo: assets/images/logo.png
 favicon: assets/images/favicon.png
