update GA in body

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ permalink: /:title
 
 
 # Google Analytics
-analytics_id: "UA-115396940-1"
+analytics_id: UA-115396940-1
 
 # Build settings
 markdown: kramdown
