update menu url links

--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ github:  raybogman
 prezi: raybogman
 
 #Additional Pages
-about: about
-contact: contact
+about: /about/
+contact: /contact/
 #privacy-policy: privacy-policy
 
 
