--- a/_data/author.yml
+++ b/_data/author.yml
@@ -3,6 +3,6 @@ author:
   name: Ray Bogman
   location: Amstelveen
   url_full: https://raybogman.com
-  url: raybogman.com
+  url: https://raybogman.com
   bio:
   assets: assets/images/raybogman-magento-doctor.png
