--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
           image: jekyll/jekyll:3.6.2
 #          image: jekyll/jekyll:pages
           hostname: jekyll
-#          command: jekyll build --watch --incremental --profile
+          command: jekyll build --watch --incremental --profile
 #          command: jekyll build --watch --incremental --profile --config _config.yml,_config-dev.yml
-          command: jekyll build --watch --incremental --profile --config _config-dev.yml
+#          command: jekyll build --watch --incremental --profile --config _config-dev.yml
           ports:
             - 4000:4000
           volumes:
