update desc + add media link

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # Site settings
 title: Ray Bogman
+intro: Entrepeneur | Speaker | Trainer | Author | Host | Consultant
 domain: raybogman.com
-description: Entrepeneur | Speaker | Trainer | Author | Host | Consultant
+description: Entrepeneur, Speaker, Trainer, Author, Host & Consultant. Hire me for an inspirational session about (mobile) performance, security and E-commerce optimization.
 cover: assets/images/raybogman-1280.jpg
 logo: assets/images/logo.png
 favicon: assets/images/favicon.png
