--- a/_data/review.yml
+++ b/_data/review.yml
@@ -1,67 +1,79 @@
+- name: Yoav Kutner - Magento
+  review: "Ray Bogman is one of the top PHP engineers I have met. He has vast knowledge of web-technologies, security and of the Magento platform. He is a rare and great professional to do business with."
+  qualities: Great Results, Good Value, High Integrity
+  position: 1
+  status: active
+
+- name: Ben van Duijn - JMango
+  review: "Ray and I were introduced to each other a couple of years ago by a mutual friend. I perceive Ray as a gifted man. Somehow he is able to be a hardcore developer and he has an excellent developed skill set to present, do sales and negotiate while finding the best outcome for all parties.  In product development he is able to truly think out of the box and be a source of inspiration. The combination of these skills to be found in 1 man is quite rare. If you're lucky enough to work with Ray please send him my heartfelt wishes.."
+  qualities: Great Results, Good Value, High Integrity
+  position: 2
+  status: active
+
 - name: David Talso - Exact Software
   review: "Ray offered what he said he would and went beyond that in helping me with some questions even though he was not a support consultant. Ray was easy to work with and even helped me at times that were probably not the best for him since there was a 7 hour difference. I will use Ray again if I need other Magento help."
   qualities: Great Results, Good Value, High Integrity
-  position: 1
+  position: 3
   status: active
 
 - name: Jonas De Smet - Studio Emma
   review: "Ray learned me the basics of Magento and some expert tricks. Ray knows very well what the goal of the course was and teached it on a good way. A guy you really want as a teacher."
   qualities: Great Results, Good Value, High Integrity
-  position: 2
+  position: 4
   status: active
 
 - name: Remmelt Beckers - Xploregroup.be
   review: "Ray provided us with an in-depth explanation on Magento's backend. Clearly showing us how backend structures can be built within the short timespan of 3 days. They have done a real good job at clearly structuring and visualizing documentation for this, as this information very much lacks from the original source. Worth every penny."
   qualities: Great Results, Good Value, High Integrity
-  position: 3
+  position: 5
   status: active
 
 - name: Drs. Julie Cai-Pan - CXP Holland B.V.
   review: "Dear Ray, Thank you for your time and effort. I really appreciate that you shared so much of your knowledge with me. Your training provided me a solid basis for the company I am currently building."
   qualities: Great Results, Personable, High Integrity
-  position: 4
+  position: 6
   status: active
 
 - name: Marieke Vos - Pasopshop.nl
   review: "Ray is speaking very enthoustic about his work. After the workshop you will get also enthoustic about it"
   qualities: Personable, Expert, Creative
-  position: 5
+  position: 7
   status: active
 
 - name: Daan Beverdam
   review: "Ray is a great person to work with, both on a personal and technical level. He's kind, open minded and has a real passion for tech and Magento in particular. I'm sure his dedication and hard work will inspire many more!"
   qualities: Great Results, Good Value, High Integrity
-  position: 6
+  position: 8
   status: active
 
 - name: Ronald Bethlehem
   review: "Ray is always up to date on the latest tech, and inspiring to work with."
   qualities: Great Results, Good Value, High Integrity
-  position: 7
+  position: 9
   status: active
 
 - name: Enno Stuurman
   review: "I have been working closely with Ray for more than five years now. It has always been a great pleasure to work with him. Ray in bulletpoints: - Ray is a great CTO, teacher, and a passionate , driven webprofessional with a sharp instinct for new technologies and technical improvements. His knowledge spans all web areas: from server to search engine (SEO) and everything in between. - besides being technical proficient, Ray has a great feel for (e)-commerce. - Ray has always been an Open Source supporter. - last but but not least, Ray is a straightforward person. He always challenges himself and others with an open mind. I am sure his drive and passion will be a valuable asset for Magento Inc. for many years to come!"
   qualities: Great Results, Good Value, High Integrity
-  position: 8
+  position: 10
   status: active
 
-- name: Yoav Kutner
-  review: "Ray Bogman is one of the top PHP engineers I have met. He has vast knowledge of web-technologies, security and of the Magento platform. He is a rare and great professional to do business with."
+- name: Rachel Tjong-A-Hung
+  review: "In the relatively short time I’ve worked with Ray, I’ve learned a lot from him. His enthusiasm was infectious and his Magento and/or internet knowledge seemed infinite. I very much enjoyed working with Ray and hope to do so again in the near future!"
   qualities: Great Results, Good Value, High Integrity
-  position: 9
+  position: 11
   status: active
 
 - name: Guido Jansen
   review: "Ray helped me a lot with my own business by providing me with useful feedback. He is enthusiastic, cooperative and works proactive on ICT security issues."
   qualities: Great Results, Good Value, High Integrity
-  position: 10
+  position: 12
   status: active
 
 - name: Martin Willekes
   review: "Ray is a very qualified and experienced requirements engineer. Ray is a creative individual with a well-developed talent for unconventional approaches to problem-solving. Keep track on the problem and if he can tries to solve it. Or address it to the correct person in a correct and proper manner."
   qualities: Great Results, Good Value, High Integrity
-  position: 11
+  position: 13
   status: active
 
 - name:
