update cert page

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ github:  raybogman
 prezi: raybogman
 
 # cert
-M2CPCD: assets/images/small_professional_cloud_developer.png
+m2cpcd: assets/images/small_professional_cloud_developer.jpg
 M2SSC: assets/images/small_solution_specialist_m2.png
 MCSS: assets/images/small_solution_specialist.png
 
