--- a/_data/author.yml
+++ b/_data/author.yml
@@ -4,5 +4,5 @@ author:
   location: Amstelveen
   url_full: https://raybogman.com
   url: https://raybogman.com
-  bio:
+  bio: Senior Business Solutions Architect - Magento, An Adobe Company
   assets: assets/images/raybogman-magento-doctor.png
