--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,3 +18,9 @@
 
 - title: Consultant
   url: /consultant/
+
+- title: Mage2CookBook
+  url: /mage2cookbook/
+
+- title: Mage.Coach
+  url: https://magecoach.raybogman.com/
