--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,5 +22,5 @@
 - title: Mage2CookBook
   url: /mage2cookbook/
 
-- title: Mage Coach
-  url: /magecoach/
+- title: Mage.Coach
+  url: https://magecoach.raybogman.com/
