--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Ray Bogman
 intro: Entrepeneur | Speaker | Trainer | Author | Host | Consultant
 domain: raybogman.com
-description: Entrepeneur, Speaker, Trainer, Author, Host & Consultant - Senior Business Solutions Architect - Magento, An Adobe Company
+description: Entrepeneur, Speaker, Trainer, Author, Host & Consultant - Head of Commerce, Customer Engineering - Magento, An Adobe Company
 cover: assets/images/raybogman-1280.jpg
 logo: assets/images/logo.png
 favicon: assets/images/favicon.png
