--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Ray Bogman
 domain: raybogman.com
-description: Entrepeneur | Speaker | Trainer | Author | Host | Consultant
+description: Entrepeneur, Speaker, Trainer, Author, Host & Consultant - Head of Commerce, Customer Engineering - Magento, An Adobe Company
 cover: assets/images/raybogman-1280.jpg
 logo: assets/images/logo.png
 favicon: assets/images/favicon.png
